--- a/public/help.html
+++ b/public/help.html
@@ -1,80 +1,87 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+<head>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>repl.new shortcuts</title>
-  </head>
-  <body>
-    <!-- Optional JavaScript; choose one of the two! -->
+	<!-- Bootstrap CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+	 crossorigin="anonymous">
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+	<title>repl.new shortcuts</title>
+</head>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
+<body>
+	<!-- Optional JavaScript; choose one of the two! -->
+
+	<!-- Option 1: Bootstrap Bundle with Popper -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+	 crossorigin="anonymous">
+	</script>
+
+	<!-- Option 2: Separate Popper and Bootstrap JS -->
+	<!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
     -->
+	<div class="container">
+		<h1>Replit language shortcuts available with repl.new</h1>
+		<h2>Custom shortcuts:</h2>
+		<h3>
+			<ul>
+				<li>
+					repl.new/python → Python 3
+				</li>
+				<li>
+					repl.new/py → Python 3
+				</li>
+				<li>
+					repl.new/py3 → Python 3
+				</li>
+				<li>
+					repl.new/python2 → Python 2
+				</li>
+				<li>
+					repl.new/py2 → Python 2
+				</li>
+				<li>
+					repl.new/js → NodeJS
+				</li>
+				<li>
+					repl.new/ts → TypeScript
+				</li>
+				<li>
+					repl.new/sh → Bash
+				</li>
+				<li>
+					repl.new/lol → LOLCODE
+				</li>
+				<li>
+					repl.new/cs → CoffeeScript
+				</li>
+				<li>
+					repl.new/c++ → C++
+				</li>
+				<li>
+					repl.new/cpp → C++
+				</li>
+				<li>
+					repl.new/css → HTML/CSS/JS project
+				</li>
+				<li>
+					repl.new/node → NodeJS
+				</li>
+				<li>
+					repl.new/golang → Go
+				</li>
+				<li>
+					repl.new/next → NextJS Spotlight page
+				</li>
+			</ul>
+		</h3>
+	</div>
+</body>
 
-    <h1>Replit language shortcuts available with repl.new</h1>
-    <h2>Custom shortcuts:</h2>
-	<h3>
-		<ul>
-			<li>
-				repl.new/python → Python 3
-			</li>
-			<li>
-				repl.new/py → Python 3
-			</li>
-			<li>
-				repl.new/py3 → Python 3
-			</li>
-			<li>
-				repl.new/python2 → Python 2
-			</li>
-			<li>
-				repl.new/py2 → Python 2
-			</li>
-			<li>
-				repl.new/js → NodeJS
-			</li>
-			<li>
-				repl.new/ts → TypeScript
-			</li>
-			<li>
-				repl.new/sh → Bash
-			</li>
-			<li>
-				repl.new/lol → LOLCODE
-			</li>
-			<li>
-				repl.new/cs → CoffeeScript
-			</li>
-			<li>
-				repl.new/c++ → C++
-			</li>
-			<li>
-				repl.new/cpp → C++
-			</li>
-			<li>
-				repl.new/css → HTML/CSS/JS project
-			</li>
-			<li>
-				repl.new/node → NodeJS
-			</li>
-			<li>
-				repl.new/golang → Go
-			</li>
-			<li>
-				repl.new/next → NextJS Spotlight page
-			</li>
-		</ul>
-	</h3>
-  </body>
 </html>
