--- a/public/help.html
+++ b/public/help.html
@@ -79,6 +79,12 @@
 				<li>
 					repl.new/next → NextJS Spotlight page
 				</li>
+				<li>
+					repl.new/kb → Kaboom (beta)
+				</li>
+				<li>
+					repl.new/kaboom → Kaboom (beta)
+				</li>
 			</ul>
 		</h3>
 	</div>
