--- a/public/help.html
+++ b/public/help.html
@@ -85,6 +85,12 @@
 				<li>
 					repl.new/kaboom → Kaboom (beta)
 				</li>
+				<li>
+					repl.new/r → R lang
+				</li>
+				<li>
+					repl.new/brainf → BrainF
+				</li>
 			</ul>
 		</h3>
 	</div>
