--- a/public/help.html
+++ b/public/help.html
@@ -71,6 +71,9 @@
 					repl.new/css → HTML/CSS/JS project
 				</li>
 				<li>
+					repl.new/web → HTML/CSS/JS project
+				</li>
+				<li>
 					repl.new/node → NodeJS
 				</li>
 				<li>
