--- a/public/help.html
+++ b/public/help.html
@@ -2,101 +2,56 @@
 <html lang="en">
 
 <head>
-	<!-- Required meta tags -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- Bootstrap CSS -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-	 crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+     crossorigin="anonymous">
 
-	<title>repl.new shortcuts</title>
+    <title>repl.new shortcuts</title>
 </head>
 
 <body>
-	<!-- Optional JavaScript; choose one of the two! -->
+    <!-- Optional JavaScript; choose one of the two! -->
 
-	<!-- Option 1: Bootstrap Bundle with Popper -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-	 crossorigin="anonymous">
-	</script>
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+     crossorigin="anonymous">
+    </script>
 
-	<!-- Option 2: Separate Popper and Bootstrap JS -->
-	<!--
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
     -->
-	<div class="container">
-		<h1>Replit language shortcuts available with repl.new</h1>
-		<h2>Custom shortcuts:</h2>
-		<h3>
-			<ul>
-				<li>
-					repl.new/python → Python 3
-				</li>
-				<li>
-					repl.new/py → Python 3
-				</li>
-				<li>
-					repl.new/py3 → Python 3
-				</li>
-				<li>
-					repl.new/python2 → Python 2
-				</li>
-				<li>
-					repl.new/py2 → Python 2
-				</li>
-				<li>
-					repl.new/js → NodeJS
-				</li>
-				<li>
-					repl.new/ts → TypeScript
-				</li>
-				<li>
-					repl.new/sh → Bash
-				</li>
-				<li>
-					repl.new/lol → LOLCODE
-				</li>
-				<li>
-					repl.new/cs → CoffeeScript
-				</li>
-				<li>
-					repl.new/c++ → C++
-				</li>
-				<li>
-					repl.new/cpp → C++
-				</li>
-				<li>
-					repl.new/css → HTML/CSS/JS project
-				</li>
-				<li>
-					repl.new/web → HTML/CSS/JS project
-				</li>
-				<li>
-					repl.new/node → NodeJS
-				</li>
-				<li>
-					repl.new/golang → Go
-				</li>
-				<li>
-					repl.new/next → NextJS Spotlight page
-				</li>
-				<li>
-					repl.new/kb → Kaboom (beta)
-				</li>
-				<li>
-					repl.new/kaboom → Kaboom (beta)
-				</li>
-				<li>
-					repl.new/r → R lang
-				</li>
-				<li>
-					repl.new/brainf → BrainF
-				</li>
-			</ul>
-		</h3>
-	</div>
+    <script type="application/javascript">
+        function updateTable() {
+            var langs = JSON.parse('{"languages":[{"name":"Python 3","shortcuts":["py","py3","python"]},{"name":"Python 2","shortcuts":["py2","python2"]},{"name":"NodeJS","shortcuts":["js","node","nodejs"]},{"name":"TypeScript","shortcuts":["ts","typescript"]},{"name":"Bash","shortcuts":["bash","typescript"]},{"name":"LOLCODE","shortcuts":["lol","lolcode"]},{"name":"CoffeeScript","shortcuts":["cs","coffeescript"]},{"name":"C++","shortcuts":["c++","cpp"]},{"name":"HTML/CSS/JS","shortcuts":["html","css","web"]},{"name":"Go (Golang)","shortcuts":["go","golang"]},{"name":"NextJS","shortcuts":["next","nextjs"]},{"name":"Kaboom (beta)","shortcuts":["kb","kaboom"]},{"name":"R lang","shortcuts":["r","rlang"]},{"name":"BrainF","shortcuts":["brainf"]}]}')
+            console.log(langs)
+            var table = document.getElementById("langlist")
+            var row = table.insertRow(0)
+            var cell1 = row.insertCell(0)
+            var cell2 = row.insertCell(1)
+            cell1.innerHTML = "Name"
+            cell2.innerHTML = "Shortcuts"
+            langs.languages.forEach(l => {
+                row = table.insertRow()
+                cell1 = row.insertCell(0)
+                cell2 = row.insertCell(1)
+                cell1.innerHTML = l.name
+                cell2.innerHTML = l.shortcuts.join(', ')
+            });
+        }
+        window.onload = function() {
+            updateTable()
+        }
+    </script>
+    <h1>Replit language shortcuts available with repl.new</h1>
+    <div class="container">
+        <table id="langlist"></table>
+    </div>
 </body>
 
 </html>
