--- a/public/help.html
+++ b/public/help.html
@@ -34,7 +34,7 @@
                     { name: 'Python 2', shortcuts: ['py2', 'python2'] },
                     { name: 'NodeJS', shortcuts: ['js', 'node', 'nodejs'] },
                     { name: 'TypeScript', shortcuts: ['ts', 'typescript'] },
-                    { name: 'Bash', shortcuts: ['bash', 'typescript'] },
+                    { name: 'Bash', shortcuts: ['sh', 'bash'] },
                     { name: 'LOLCODE', shortcuts: ['lol', 'lolcode'] },
                     { name: 'CoffeeScript', shortcuts: ['cs', 'coffeescript'] },
                     { name: 'C++', shortcuts: ['c++', 'cpp'] },
