--- a/public/help.html
+++ b/public/help.html
@@ -12,16 +12,28 @@
 
     <style>
         body {
-            background-color: #171D2D
+            background-color: #171D2D;
+            font-size: 16px;
         }
 
         h1 {
-            color: white
+            color: white;
         }
+
         a {
-            color: white
+            color: white;
         }
     </style>
+    <div class="container" style="background-color: #1D2332">
+        <!-- Image and text -->
+        <nav class="navbar navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">
+                <img src="https://replit.com/public/images/sm.png" width="30" height="30"
+                    class="d-inline-block align-top" alt="">
+                Replit.com
+            </a>
+        </nav>
+    </div>
     <title>repl.new shortcuts</title>
 </head>
 
@@ -121,9 +133,9 @@
             })
         }
     </script>
-    <div class="container">
+    <div class="container" style="background-color: #1D2332">
         <h1>Replit language shortcuts available with repl.new</h1>
-        <table id="langlist" class="table table-bordered table-dark"></table>
+        <table id="langlist" class="table table-bordered table-striped table-dark"></table>
     </div>
 </body>
 
