--- a/public/help.html
+++ b/public/help.html
@@ -4,6 +4,7 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta name="description" content="Quickly create Replit projects using repl.new">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
@@ -16,7 +17,7 @@
             font-size: 16px;
         }
 
-        h1 {
+        h1,h2,h3,p {
             color: white;
         }
 
@@ -62,7 +63,7 @@
                     { name: 'LOLCODE', shortcuts: ['lol', 'lolcode'] },
                     { name: 'CoffeeScript', shortcuts: ['cs', 'coffeescript'] },
                     { name: 'C++', shortcuts: ['c++', 'cpp'] },
-                    { name: 'HTML/CSS/JS', shortcuts: ['html', 'css', 'web'] },
+                    { name: 'HTML/CSS/JS', shortcuts: ['web', 'css', 'html'] },
                     { name: 'Go (Golang)', shortcuts: ['go', 'golang'] },
                     { name: 'NextJS', shortcuts: ['next', 'nextjs'] },
                     { name: 'Kaboom (beta)', shortcuts: ['kb', 'kaboom'] },
@@ -135,6 +136,7 @@
     </script>
     <div class="container" style="background-color: #1D2332">
         <h1>Replit language shortcuts available with repl.new</h1>
+        <p>Use these shortcuts to quickly create new replit.com projects!</p>
         <table id="langlist" class="table table-bordered table-striped table-dark"></table>
     </div>
 </body>
