--- a/public/help.html
+++ b/public/help.html
@@ -136,7 +136,7 @@
     </script>
     <div class="container" style="background-color: #1D2332">
         <h1>Replit language shortcuts available with repl.new</h1>
-        <p>Use these shortcuts to quickly create new replit.com projects!</p>
+        <p>Use these shortcuts to quickly create new <a href="https://replit.com">replit.com</a> projects!</p>
         <table id="langlist" class="table table-bordered table-striped table-dark"></table>
     </div>
 </body>
