--- a/public/help.html
+++ b/public/help.html
@@ -35,7 +35,7 @@
             </a>
         </nav>
     </div>
-    <title>repl.new shortcuts</title>
+    <title>repl.new shortcuts for Replit.com</title>
 </head>
 
 <body>
