--- a/public/help.html
+++ b/public/help.html
@@ -31,7 +31,7 @@
     <div class="container" style="background-color: #1D2332">
         <!-- Image and text -->
         <nav class="navbar navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="https://replit.com">
                 <img src="https://replit.com/public/images/sm.png" width="30" height="30"
                     class="d-inline-block align-top" alt="">
                 Replit.com
