--- a/public/help.html
+++ b/public/help.html
@@ -56,280 +56,7 @@
     -->
     <script type="application/javascript">
         function updateTable() {
-            let langs = {
-                languages: [
-                    {
-                        name: 'Python 3',
-                        shortcuts: ['py', 'py3', 'python'],
-                        meta: { slug: 'python3', type: 'language' }
-                    },
-                    {
-                        name: 'Python 2',
-                        shortcuts: ['py2', 'python2'],
-                        meta: { slug: 'python', type: 'language' }
-                    },
-                    {
-                        name: 'NodeJS',
-                        shortcuts: ['js', 'node', 'nodejs'],
-                        meta: { slug: 'nodejs', type: 'language' }
-                    },
-                    {
-                        name: 'TypeScript',
-                        shortcuts: ['ts', 'typescript'],
-                        meta: { slug: 'typescript', type: 'language' }
-                    },
-                    {
-                        name: 'Bash',
-                        shortcuts: ['sh', 'bash'],
-                        meta: { slug: 'bash', type: 'language' }
-                    },
-                    {
-                        name: 'LOLCODE',
-                        shortcuts: ['lol', 'lolcode'],
-                        meta: { slug: 'lolcode', type: 'language' }
-                    },
-                    {
-                        name: 'CoffeeScript',
-                        shortcuts: ['cs', 'coffeescript'],
-                        meta: { slug: 'coffeescript', type: 'language' }
-                    },
-                    {
-                        name: 'C++',
-                        shortcuts: ['c++', 'cpp'],
-                        meta: { slug: 'cpp', type: 'language' }
-                    },
-                    {
-                        name: 'HTML/CSS/JS',
-                        shortcuts: ['web', 'css', 'html'],
-                        meta: { slug: 'html', type: 'language' }
-                    },
-                    {
-                        name: 'Go (Golang)',
-                        shortcuts: ['go', 'golang'],
-                        meta: { slug: 'go', type: 'language' }
-                    },
-                    {
-                        name: 'NextJS',
-                        shortcuts: ['next', 'nextjs'],
-                        meta: { slug: 'nextjs', type: 'template' }
-                    },
-                    {
-                        name: 'Kaboom (beta)',
-                        shortcuts: ['kb', 'kaboom'],
-                        meta: { slug: 'kaboom', type: 'language' }
-                    },
-                    {
-                        name: 'R lang',
-                        shortcuts: ['r', 'rlang'],
-                        meta: { slug: 'rlang', type: 'language' }
-                    },
-                    {
-                        name: 'BrainF',
-                        shortcuts: ['brainf'],
-                        meta: { slug: 'brainfuck', type: 'language' }
-                    },
-                    {
-                        name: 'C',
-                        shortcuts: ['c'],
-                        meta: { slug: 'c', type: 'language' }
-                    },
-                    {
-                        name: 'Java',
-                        shortcuts: ['java10'],
-                        meta: { slug: 'java10', type: 'language' }
-                    },
-                    {
-                        name: 'Ruby',
-                        shortcuts: ['ruby'],
-                        meta: { slug: 'ruby', type: 'language' }
-                    },
-                    {
-                        name: 'Scheme',
-                        shortcuts: ['scheme'],
-                        meta: { slug: 'scheme', type: 'language' }
-                    },
-                    {
-                        name: 'Rust',
-                        shortcuts: ['rust'],
-                        meta: { slug: 'rust', type: 'language' }
-                    },
-                    {
-                        name: 'Clojure',
-                        shortcuts: ['clojure'],
-                        meta: { slug: 'clojure', type: 'language' }
-                    },
-                    {
-                        name: 'Haskell',
-                        shortcuts: ['haskell'],
-                        meta: { slug: 'haskell', type: 'language' }
-                    },
-                    {
-                        name: 'Kotlin',
-                        shortcuts: ['kotlin'],
-                        meta: { slug: 'kotlin', type: 'language' }
-                    },
-                    {
-                        name: 'Lua',
-                        shortcuts: ['lua'],
-                        meta: { slug: 'lua', type: 'language' }
-                    },
-                    {
-                        name: 'Deno',
-                        shortcuts: ['deno'],
-                        meta: { slug: 'deno', type: 'language' }
-                    },
-                    {
-                        name: 'C#',
-                        shortcuts: ['csharp'],
-                        meta: { slug: 'csharp', type: 'language' }
-                    },
-                    {
-                        name: 'F#',
-                        shortcuts: ['fsharp'],
-                        meta: { slug: 'fsharp', type: 'language' }
-                    },
-                    {
-                        name: 'Swift',
-                        shortcuts: ['swift'],
-                        meta: { slug: 'swift', type: 'language' }
-                    },
-                    {
-                        name: 'Crystal',
-                        shortcuts: ['crystal'],
-                        meta: { slug: 'crystal', type: 'language' }
-                    },
-                    {
-                        name: 'Julia',
-                        shortcuts: ['julia'],
-                        meta: { slug: 'julia', type: 'language' }
-                    },
-                    {
-                        name: 'Elixir',
-                        shortcuts: ['elixir'],
-                        meta: { slug: 'elixir', type: 'language' }
-                    },
-                    {
-                        name: 'Nim',
-                        shortcuts: ['nim'],
-                        meta: { slug: 'nim', type: 'language' }
-                    },
-                    {
-                        name: 'Dart',
-                        shortcuts: ['dart'],
-                        meta: { slug: 'dart', type: 'language' }
-                    },
-                    {
-                        name: 'Reason',
-                        shortcuts: ['reason_nodejs'],
-                        meta: { slug: 'reason_nodejs', type: 'language' }
-                    },
-                    {
-                        name: 'Tcl',
-                        shortcuts: ['tcl'],
-                        meta: { slug: 'tcl', type: 'language' }
-                    },
-                    {
-                        name: 'Erlang',
-                        shortcuts: ['erlang'],
-                        meta: { slug: 'erlang', type: 'language' }
-                    },
-                    {
-                        name: 'Emacs',
-                        shortcuts: ['elisp'],
-                        meta: { slug: 'elisp', type: 'language' }
-                    },
-                    {
-                        name: 'SQLite',
-                        shortcuts: ['sqlite'],
-                        meta: { slug: 'sqlite', type: 'language' }
-                    },
-                    {
-                        name: 'PHP CLI',
-                        shortcuts: ['php_cli'],
-                        meta: { slug: 'php_cli', type: 'language' }
-                    },
-                    {
-                        name: 'Raku',
-                        shortcuts: ['raku'],
-                        meta: { slug: 'raku', type: 'language' }
-                    },
-                    {
-                        name: 'Scala',
-                        shortcuts: ['scala'],
-                        meta: { slug: 'scala', type: 'language' }
-                    },
-                    {
-                        name: 'Roy',
-                        shortcuts: ['roy'],
-                        meta: { slug: 'roy', type: 'language' }
-                    },
-                    {
-                        name: 'PHP Web',
-                        shortcuts: ['php7'],
-                        meta: { slug: 'php7', type: 'language' }
-                    },
-                    {
-                        name: 'Pygame',
-                        shortcuts: ['pygame'],
-                        meta: { slug: 'pygame', type: 'language' }
-                    },
-                    {
-                        name: 'Love2D',
-                        shortcuts: ['love2d'],
-                        meta: { slug: 'love2d', type: 'language' }
-                    },
-                    {
-                        name: 'Pyxel',
-                        shortcuts: ['pyxel'],
-                        meta: { slug: 'pyxel', type: 'language' }
-                    },
-                    {
-                        name: 'Tkinter',
-                        shortcuts: ['tkinter'],
-                        meta: { slug: 'tkinter', type: 'language' }
-                    },
-                    {
-                        name: 'Java',
-                        shortcuts: ['java_swing'],
-                        meta: { slug: 'java_swing', type: 'language' }
-                    },
-                    {
-                        name: 'QBasic',
-                        shortcuts: ['qbasic'],
-                        meta: { slug: 'qbasic', type: 'language' }
-                    },
-                    {
-                        name: 'Forth',
-                        shortcuts: ['forth'],
-                        meta: { slug: 'forth', type: 'language' }
-                    },
-                    {
-                        name: 'APL',
-                        shortcuts: ['apl'],
-                        meta: { slug: 'apl', type: 'language' }
-                    },
-                    {
-                        name: 'Basic',
-                        shortcuts: ['basic'],
-                        meta: { slug: 'basic', type: 'language' }
-                    },
-                    {
-                        name: 'Emoticon',
-                        shortcuts: ['emoticon'],
-                        meta: { slug: 'emoticon', type: 'language' }
-                    },
-                    {
-                        name: 'Bloop',
-                        shortcuts: ['bloop'],
-                        meta: { slug: 'bloop', type: 'language' }
-                    },
-                    {
-                        name: 'Unlambda',
-                        shortcuts: ['unlambda'],
-                        meta: { slug: 'unlambda', type: 'language' }
-                    }
-                ]
-            }
+            let langs = {languages:[{name:"Python 3",shortcuts:["py","py3","python"],meta:{slug:"python3",type:"language"}},{name:"Python 2",shortcuts:["py2","python2"],meta:{slug:"python",type:"language"}},{name:"NodeJS",shortcuts:["js","node","nodejs"],meta:{slug:"nodejs",type:"language"}},{name:"TypeScript",shortcuts:["ts","typescript"],meta:{slug:"typescript",type:"language"}},{name:"Bash",shortcuts:["sh","bash"],meta:{slug:"bash",type:"language"}},{name:"LOLCODE",shortcuts:["lol","lolcode"],meta:{slug:"lolcode",type:"language"}},{name:"CoffeeScript",shortcuts:["cs","coffeescript"],meta:{slug:"coffeescript",type:"language"}},{name:"C++",shortcuts:["c++","cpp"],meta:{slug:"cpp",type:"language"}},{name:"HTML/CSS/JS",shortcuts:["web","css","html"],meta:{slug:"html",type:"language"}},{name:"Go (Golang)",shortcuts:["go","golang"],meta:{slug:"go",type:"language"}},{name:"NextJS",shortcuts:["next","nextjs"],meta:{slug:"nextjs",type:"template"}},{name:"Kaboom (beta)",shortcuts:["kb","kaboom"],meta:{slug:"kaboom",type:"language"}},{name:"R lang",shortcuts:["r","rlang"],meta:{slug:"rlang",type:"language"}},{name:"BrainF",shortcuts:["brainf"],meta:{slug:"brainfuck",type:"language"}},{name:"C",shortcuts:["c"],meta:{slug:"c",type:"language"}},{name:"Java",shortcuts:["java10"],meta:{slug:"java10",type:"language"}},{name:"Ruby",shortcuts:["ruby"],meta:{slug:"ruby",type:"language"}},{name:"Scheme",shortcuts:["scheme"],meta:{slug:"scheme",type:"language"}},{name:"Rust",shortcuts:["rust"],meta:{slug:"rust",type:"language"}},{name:"Clojure",shortcuts:["clojure"],meta:{slug:"clojure",type:"language"}},{name:"Haskell",shortcuts:["haskell"],meta:{slug:"haskell",type:"language"}},{name:"Kotlin",shortcuts:["kotlin"],meta:{slug:"kotlin",type:"language"}},{name:"Lua",shortcuts:["lua"],meta:{slug:"lua",type:"language"}},{name:"Deno",shortcuts:["deno"],meta:{slug:"deno",type:"language"}},{name:"C#",shortcuts:["csharp"],meta:{slug:"csharp",type:"language"}},{name:"F#",shortcuts:["fsharp"],meta:{slug:"fsharp",type:"language"}},{name:"Swift",shortcuts:["swift"],meta:{slug:"swift",type:"language"}},{name:"Crystal",shortcuts:["crystal"],meta:{slug:"crystal",type:"language"}},{name:"Julia",shortcuts:["julia"],meta:{slug:"julia",type:"language"}},{name:"Elixir",shortcuts:["elixir"],meta:{slug:"elixir",type:"language"}},{name:"Nim",shortcuts:["nim"],meta:{slug:"nim",type:"language"}},{name:"Dart",shortcuts:["dart"],meta:{slug:"dart",type:"language"}},{name:"Reason",shortcuts:["reason_nodejs"],meta:{slug:"reason_nodejs",type:"language"}},{name:"Tcl",shortcuts:["tcl"],meta:{slug:"tcl",type:"language"}},{name:"Erlang",shortcuts:["erlang"],meta:{slug:"erlang",type:"language"}},{name:"Emacs",shortcuts:["elisp"],meta:{slug:"elisp",type:"language"}},{name:"SQLite",shortcuts:["sqlite"],meta:{slug:"sqlite",type:"language"}},{name:"PHP CLI",shortcuts:["php_cli"],meta:{slug:"php_cli",type:"language"}},{name:"Raku",shortcuts:["raku"],meta:{slug:"raku",type:"language"}},{name:"Scala",shortcuts:["scala"],meta:{slug:"scala",type:"language"}},{name:"Roy",shortcuts:["roy"],meta:{slug:"roy",type:"language"}},{name:"PHP Web",shortcuts:["php7"],meta:{slug:"php7",type:"language"}},{name:"Pygame",shortcuts:["pygame"],meta:{slug:"pygame",type:"language"}},{name:"Love2D",shortcuts:["love2d"],meta:{slug:"love2d",type:"language"}},{name:"Pyxel",shortcuts:["pyxel"],meta:{slug:"pyxel",type:"language"}},{name:"Tkinter",shortcuts:["tkinter"],meta:{slug:"tkinter",type:"language"}},{name:"Java",shortcuts:["java_swing"],meta:{slug:"java_swing",type:"language"}},{name:"QBasic",shortcuts:["qbasic"],meta:{slug:"qbasic",type:"language"}},{name:"Forth",shortcuts:["forth"],meta:{slug:"forth",type:"language"}},{name:"APL",shortcuts:["apl"],meta:{slug:"apl",type:"language"}},{name:"Basic",shortcuts:["basic"],meta:{slug:"basic",type:"language"}},{name:"Emoticon",shortcuts:["emoticon"],meta:{slug:"emoticon",type:"language"}},{name:"Bloop",shortcuts:["bloop"],meta:{slug:"bloop",type:"language"}},{name:"Unlambda",shortcuts:["unlambda"],meta:{slug:"unlambda",type:"language"}}]}
 
             function generateTableHead(table, data) {
                 let thead = table.createTHead();
